# nifty

./: LICENSE  README.org  nifty.gemspec
lib/: nifty.rb
project_templates/c_clang/: Makefile
project_templates/c_clang/.nifty/: nifty.json
project_templates/c_clang/src/: REPLACE_project_name.c
project_templates/c_clang/tests/: Makefile  test_main.c
project_templates/python_poetry/: pyproject.toml  replace.json
project_templates/python_poetry/.nifty/: nifty.json
project_templates/ruby_gem/: REPLACE_project_name.gemspec
project_templates/ruby_gem/.nifty/: nifty.json
project_templates/ruby_gem/spec/: REPLACE_project_name_spec.rb
spec/: nifty_spec.rb
